--- a/producer/src/main/resources/log4j.properties
+++ b/producer/src/main/resources/log4j.properties
@@ -2,4 +2,4 @@ log4j.rootLogger=INFO, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%p --- %c:%L %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %p --- %c:%L %m%n
